updated data, added views/url/models--> forms & front end

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'styles.css' %}">
-    <title> {% block title %}{% endblock %}</title>
+    <title> {% block title %}Score{% endblock %}</title>
 </head>
-<header><a href="{% url 'home' %}"">   Anna's Music</a></header>
+<header><a href="{% url 'home' %}""> Score </a></header>
 <br>
 <body>
     <div class="container">
