--- a/templates/music/album_list.html
+++ b/templates/music/album_list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Anna's Albums{% endblock %}
+{% block title %}Score- Album List{% endblock %}
 {% block content %}
 <br>
 <div class="actions">
@@ -17,3 +17,5 @@
 
 
 {% endblock %}
+
+<!-- This is where user can look at the list of albums --- click on the album and be taken to album detail with the artist name and list of songs  -->
