--- a/templates/music/new_album.html
+++ b/templates/music/new_album.html
@@ -8,3 +8,6 @@
         <button type="submit">Add Album</button>
     </form>
 {% endblock  %}
+
+
+<!-- this is where the user can add albums to the page / database of songs / albums to be selected from  -->
