--- a/templates/music/index.html
+++ b/templates/music/index.html
@@ -1,19 +1,30 @@
 {% extends 'base.html' %}
-{% block title %}Anna's Albums{% endblock %}
+{% block title %}Score{% endblock %}
 {% block content %}
 <br>
 <div class="actions">
-    <h6><a href="{% url 'artist-list' %}">ARTISTS</a></h6>
+    <h6><a href="{% url 'deck-list' %}">WORDS</a></h6>
     <h6> | </h6>    
-    <h6><a href="{% url 'album-list' %}">ALBUMS</a></h6>
+    <h6><a href="{% url 'artist-list' %}">ARTIST</a></h6>
     <h6> | </h6>
+    <h6> | </h6>
+    <h6> <a href="{% url 'album-list' %}"></a>ALBUM</h6>
+    <H6> | </H6>
     <h6><a href="{% url 'add-album' %}">ADD NEW ALBUM</a></h6>
     </div>
-    {% for album in albums %}
-    <h4><a href="{% url 'album-detail' album.pk %}">{{album}}</a></h4>
-    {% endfor %}
+    <h1>{{ deck }}</h1>
+    <h1>{{ song }}</h1>
     <br>
     <br>
 
 
 {% endblock %}
+
+<!-- this is where the user comes for the score 
+i want it clean and simple with just the promt word and the definition and song 
+these are randomized 
+idealy it will play the song  -->
+
+
+
+
