css, views, random, settings updates

--- a/templates/music/album_list.html
+++ b/templates/music/album_list.html
@@ -18,4 +18,6 @@
 
 {% endblock %}
 
-<!-- This is where user can look at the list of albums --- click on the album and be taken to album detail with the artist name and list of songs  -->
+<!-- This is where user can look at the list of albums --- 
+    click on the album and be taken to album detail with the 
+    artist name and list of songs  -->
