--- a/templates/music/deck-list.html
+++ b/templates/music/deck-list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Score- Artist List{% endblock %}
+{% block title %}Score- WORDS{% endblock %}
 {% block content %}
 <br>
 <div class="actions">
@@ -17,7 +17,4 @@
 
 
 
-<!-- ARTIST LIST AS LINKS DO ALBUM LIST SO 
-    THE USER CAN LOOK AT THE FULL ALBUMS  -->
-
-    <!-- WHAT WAS ARTIST-DETAIL -->
+<!-- user can see the list of words  -->
