--- a/templates/music/new_album.html
+++ b/templates/music/new_album.html
@@ -10,4 +10,5 @@
 {% endblock  %}
 
 
-<!-- this is where the user can add albums to the page / database of songs / albums to be selected from  -->
+<!-- this is where the user can add albums to the page /
+database of songs / albums to be selected from  -->
